--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel="stylesheet" href="/Index.css">
+	<link rel="stylesheet" href="/index.css">
+	<!-- /index.css is hidden on git repo, but is an output for tailwind. -->
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
 		rel="stylesheet">
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
