--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<!-- /index.css is hidden on git repo, but is an output for tailwind. -->
+	<link rel="stylesheet" href="/index.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +20,16 @@
 		rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 	<script defer src='/build/bundle.js'></script>
-	<link rel="stylesheet" href="/index.css">
-
+	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 </head>
 
 <body>
 
+	<script src="js/script.js"></script>
+
 </body>
+
+
 
 </html>
